--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5ff44334",
+   "id": "1587237e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b39b72f",
+   "id": "4c62b0f2",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5929a76f",
+   "id": "653d9bf0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92fe1756",
+   "id": "d538be2e",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06bb4354",
+   "id": "c9f7526d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1517d422",
+   "id": "f0e052bc",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "450e498b",
+   "id": "d7ce3699",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2296cc18",
+   "id": "daf889ac",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d679a320",
+   "id": "51c14511",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7344056a",
+   "id": "54895aa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3969d2e",
+   "id": "5e25417e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de5c90cc",
+   "id": "5c5a008f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b21d9996",
+   "id": "db273a11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46b3d79b",
+   "id": "4ef2a174",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0d251af",
+   "id": "0cdefcb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fe5cb71",
+   "id": "35eaaf88",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9d01209",
+   "id": "09a4bf01",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ade6897",
+   "id": "78027d43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5141531f",
+   "id": "4d07936a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6408b828",
+   "id": "ee51985d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29d0dd27",
+   "id": "398f68df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e62b5797",
+   "id": "c32b2ec8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38129339",
+   "id": "9e1fd719",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bcd1256",
+   "id": "f26308bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16650bf4",
+   "id": "0c94bd4a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a71cb0af",
+   "id": "0a7d2095",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4729cc12",
+   "id": "3a75acf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2aaa235",
+   "id": "242b0c26",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "216ef99b",
+   "id": "70dda4d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd36a8f0",
+   "id": "335bb582",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dab83fd6",
+   "id": "2317b792",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f12a070",
+   "id": "1ed699af",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78d73904",
+   "id": "9b35ec7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9182cb8",
+   "id": "2e53217a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9f6fa79",
+   "id": "3fc08038",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fbebdf3",
+   "id": "87791cd3",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aaa48e3",
+   "id": "49c01491",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "839520e9",
+   "id": "7a31e31b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da582515",
+   "id": "92589603",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "429f946c",
+   "id": "17fe5115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "655f3f41",
+   "id": "7cbe6e20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d49d54d2",
+   "id": "6c097ca4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49b38b25",
+   "id": "f93cf16e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5a776f8",
+   "id": "0e1b7793",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,46 +892,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25f30e6a",
+   "id": "cdbaba8c",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "\n",
-    "def collect_cv_predictions(pipelines, cv_splitter, predictions):\n",
+    "def collect_cv_predictions(pipelines, cv_splitter, predictions, prediction_time):\n",
     "\n",
+    "    split_generator = cv_splitter.split(prediction_time.skb.eval())\n",
     "    def splitter(X, y):\n",
     "        \"\"\"Workaround to transform a scikit-learn splitter into a function understood\n",
     "        by `skrub.train_test_split`.\"\"\"\n",
-    "        train_idx, test_idx = next(cv_splitter.split(X, y))\n",
+    "        train_idx, test_idx = next(split_generator)\n",
     "        return X[train_idx], X[test_idx], y[train_idx], y[test_idx]\n",
     "\n",
-    "    return [\n",
-    "         pipeline.predict(\n",
-    "            predictions.skb.train_test_split(\n",
-    "                predictions.skb.get_data(), splitter=splitter\n",
-    "            )[\"test\"]\n",
+    "    results = []\n",
+    "    for (_, test_idx), pipeline in zip(\n",
+    "        cv_splitter.split(prediction_time.skb.eval()), pipelines\n",
+    "    ):\n",
+    "        split = predictions.skb.train_test_split(\n",
+    "            predictions.skb.get_data(), splitter=splitter\n",
     "        )\n",
-    "        for pipeline in pipelines\n",
-    "    ]"
+    "        results.append(\n",
+    "            pl.DataFrame(\n",
+    "                {\n",
+    "                    \"prediction_time\": prediction_time.skb.eval()[test_idx],\n",
+    "                    \"load_mw\": split[\"test\"][\"_skrub_y\"],\n",
+    "                    \"predicted_load_mw\": pipeline.predict(split[\"test\"]),\n",
+    "                }\n",
+    "            )\n",
+    "        )\n",
+    "    return results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c2634ed",
+   "id": "c505db8e",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "cv_predictions = collect_cv_predictions(cv_results[\"pipeline\"], ts_cv_5, predictions)"
+    "cv_predictions = collect_cv_predictions(\n",
+    "    cv_results[\"pipeline\"], ts_cv_5, predictions, prediction_time\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb14f7b7",
+   "id": "2e9d775b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -953,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "482bbf5f",
+   "id": "ba06af99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4467a08c",
+   "id": "1d9358a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ee19f3c",
+   "id": "a99f1b45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae9706ef",
+   "id": "502bb370",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08b6d771",
+   "id": "d1b22ed5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1026,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e84302b2",
+   "id": "81698bf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0f81b9b",
+   "id": "c104d48d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f97094f",
+   "id": "5f957db9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16ce93c8",
+   "id": "53e48114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,18 +1098,12 @@
     "    end_time = plot_at_time + datetime.timedelta(\n",
     "        hours=named_predictions.skb.eval().shape[1]\n",
     "    )\n",
-    "    true_values_past = (\n",
-    "        merged_data.filter(\n",
-    "            pl.col(\"prediction_time\").is_between(\n",
-    "                start_time, plot_at_time, closed=\"both\"\n",
-    "            )\n",
-    "        ).rename({\"load_mw\": \"Past true load\"})\n",
-    "    )\n",
-    "    true_values_future = (\n",
-    "        merged_data.filter(\n",
-    "            pl.col(\"prediction_time\").is_between(plot_at_time, end_time, closed=\"both\")\n",
-    "        ).rename({\"load_mw\": \"Future true load\"})\n",
-    "    )\n",
+    "    true_values_past = merged_data.filter(\n",
+    "        pl.col(\"prediction_time\").is_between(start_time, plot_at_time, closed=\"both\")\n",
+    "    ).rename({\"load_mw\": \"Past true load\"})\n",
+    "    true_values_future = merged_data.filter(\n",
+    "        pl.col(\"prediction_time\").is_between(plot_at_time, end_time, closed=\"both\")\n",
+    "    ).rename({\"load_mw\": \"Future true load\"})\n",
     "    predicted_record = (\n",
     "        merged_data.skb.select(\n",
     "            cols=skrub.selectors.filter_names(str.startswith, \"predict\")\n",
@@ -1142,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32dbb94f",
+   "id": "abbe3f08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1154,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edfb3042",
+   "id": "44bd7fd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66a278e6",
+   "id": "a5e401fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec07b9fa",
+   "id": "02ca47d8",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1213,7 +1219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95a640c6",
+   "id": "ed38db2f",
    "metadata": {},
    "outputs": [],
    "source": []
