--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "69baa454",
+   "id": "7cf9f1e5",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e08dec1",
+   "id": "78954b84",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24a91010",
+   "id": "0b21fe50",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c7934ff",
+   "id": "3c9dd6f5",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a180de2",
+   "id": "a65e3dae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57eced28",
+   "id": "d5922bf9",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6535a4d3",
+   "id": "8286a259",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7047a3a2",
+   "id": "0a68d9f4",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d137659",
+   "id": "817571e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "307a6a59",
+   "id": "d8d92b74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46841026",
+   "id": "c4fe6751",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb441f34",
+   "id": "898108b8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f38b058a",
+   "id": "f5261804",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a370f2d6",
+   "id": "8c75d052",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1894ce9",
+   "id": "47e69cd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44156963",
+   "id": "99e27452",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfac980f",
+   "id": "43168d07",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4ec0b2c",
+   "id": "f9fc1019",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b35f5c2",
+   "id": "4e13899a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fc38c3d",
+   "id": "ef568d14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4389eec",
+   "id": "8a9d3976",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5053a0f7",
+   "id": "dd01dd0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd5186ae",
+   "id": "da8dc67f",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2880961d",
+   "id": "3be72e24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1122b1b5",
+   "id": "14a48f16",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1a9cda2",
+   "id": "8016e8a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ca99d0a",
+   "id": "968b2d1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e094de9",
+   "id": "f3dc1cd6",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fa5e8a1",
+   "id": "836d3cfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "530cfbef",
+   "id": "ed7e0f8c",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0d1a3e5",
+   "id": "f6a01f0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bcf3f81",
+   "id": "01902c8f",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "978b7d07",
+   "id": "73d3ad18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9369b71c",
+   "id": "3ab1474f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77df860c",
+   "id": "6732e952",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28595d5e",
+   "id": "4f05d077",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67e51037",
+   "id": "65fd6b6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15cdb2ed",
+   "id": "af7727c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb5e2dcd",
+   "id": "fb496ecc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ba000fb",
+   "id": "1ed9e41a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5765341b",
+   "id": "46ecb8a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fc6101c",
+   "id": "4d048cec",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f48c2f83",
+   "id": "95ce0faa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "451a50c8",
+   "id": "069a92f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,46 +892,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cefa792",
+   "id": "37cc8a32",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "\n",
-    "def collect_cv_predictions(pipelines, cv_splitter, predictions):\n",
+    "def collect_cv_predictions(pipelines, cv_splitter, predictions, prediction_time):\n",
     "\n",
+    "    split_generator = cv_splitter.split(prediction_time.skb.eval())\n",
     "    def splitter(X, y):\n",
     "        \"\"\"Workaround to transform a scikit-learn splitter into a function understood\n",
     "        by `skrub.train_test_split`.\"\"\"\n",
-    "        train_idx, test_idx = next(cv_splitter.split(X, y))\n",
+    "        train_idx, test_idx = next(split_generator)\n",
     "        return X[train_idx], X[test_idx], y[train_idx], y[test_idx]\n",
     "\n",
-    "    return [\n",
-    "         pipeline.predict(\n",
-    "            predictions.skb.train_test_split(\n",
-    "                predictions.skb.get_data(), splitter=splitter\n",
-    "            )[\"test\"]\n",
+    "    results = []\n",
+    "    for (_, test_idx), pipeline in zip(\n",
+    "        cv_splitter.split(prediction_time.skb.eval()), pipelines\n",
+    "    ):\n",
+    "        split = predictions.skb.train_test_split(\n",
+    "            predictions.skb.get_data(), splitter=splitter\n",
     "        )\n",
-    "        for pipeline in pipelines\n",
-    "    ]"
+    "        results.append(\n",
+    "            pl.DataFrame(\n",
+    "                {\n",
+    "                    \"prediction_time\": prediction_time.skb.eval()[test_idx],\n",
+    "                    \"load_mw\": split[\"test\"][\"_skrub_y\"],\n",
+    "                    \"predicted_load_mw\": pipeline.predict(split[\"test\"]),\n",
+    "                }\n",
+    "            )\n",
+    "        )\n",
+    "    return results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6e3d3c9",
+   "id": "06360365",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "cv_predictions = collect_cv_predictions(cv_results[\"pipeline\"], ts_cv_5, predictions)"
+    "cv_predictions = collect_cv_predictions(\n",
+    "    cv_results[\"pipeline\"], ts_cv_5, predictions, prediction_time\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76e4429f",
+   "id": "295e178d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -953,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66fc23ec",
+   "id": "9ac0b854",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41afbe22",
+   "id": "995bf08b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bdd733e",
+   "id": "7b2221c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5059cb1",
+   "id": "a06c56c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e457bb3",
+   "id": "57265710",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1026,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bcd970d",
+   "id": "bf3299bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12b137f4",
+   "id": "7217eaad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "575e5972",
+   "id": "a911e147",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "608c79c9",
+   "id": "6e863251",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,18 +1098,12 @@
     "    end_time = plot_at_time + datetime.timedelta(\n",
     "        hours=named_predictions.skb.eval().shape[1]\n",
     "    )\n",
-    "    true_values_past = (\n",
-    "        merged_data.filter(\n",
-    "            pl.col(\"prediction_time\").is_between(\n",
-    "                start_time, plot_at_time, closed=\"both\"\n",
-    "            )\n",
-    "        ).rename({\"load_mw\": \"Past true load\"})\n",
-    "    )\n",
-    "    true_values_future = (\n",
-    "        merged_data.filter(\n",
-    "            pl.col(\"prediction_time\").is_between(plot_at_time, end_time, closed=\"both\")\n",
-    "        ).rename({\"load_mw\": \"Future true load\"})\n",
-    "    )\n",
+    "    true_values_past = merged_data.filter(\n",
+    "        pl.col(\"prediction_time\").is_between(start_time, plot_at_time, closed=\"both\")\n",
+    "    ).rename({\"load_mw\": \"Past true load\"})\n",
+    "    true_values_future = merged_data.filter(\n",
+    "        pl.col(\"prediction_time\").is_between(plot_at_time, end_time, closed=\"both\")\n",
+    "    ).rename({\"load_mw\": \"Future true load\"})\n",
     "    predicted_record = (\n",
     "        merged_data.skb.select(\n",
     "            cols=skrub.selectors.filter_names(str.startswith, \"predict\")\n",
@@ -1142,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53a1ae69",
+   "id": "4218dc12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1154,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60e7004a",
+   "id": "fe880c49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b423f892",
+   "id": "a46f7118",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bd83e89",
+   "id": "5dc04129",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1213,7 +1219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cd8fa4c",
+   "id": "8987662d",
    "metadata": {},
    "outputs": [],
    "source": []
